# nptool_cens

./: .gitignore  .gitlab-ci.yml  README.md
Benchmarks/cats/: benchmark_cats.detector
Dockerfile/: np_docker_base  nptool_docker
Documentation/detectors/: Plunger.md  STARK.md
Inputs/DetectorConfiguration/: MUGASTAtLISE.detector  ZDD.detector
Inputs/EventGenerator/: GEFneutron0.source  neutron.source
NPData/: README.md
NPLib/: .gitignore  CMakeLists.txt
NPLib/Core/: NPDetectorFactory.cxx  NPDetectorManager.cxx  NPDetectorManager.h  NPGlobalSystemOfUnits.h  NPOptionManager.cxx  NPOptionManager.h  NPSystemOfUnits.h  NPVDetector.h  RootHistogramsCalib.cxx  RootHistogramsCalib.h
NPLib/Detectors/Actar/: CMakeLists.txt  MTreeStructureLinkDef.h  TActarBeam.cxx  TActarBeam.h  TActarData.cxx  TActarData.h  TActarPhysics.cxx  TActarPhysics.h  TActarPhysicsReader.cxx  TActarPhysicsReader.h  TActarScattering.cxx  TActarScattering.h
NPLib/Detectors/CACAO/: CMakeLists.txt  TCACAOData.cxx  TCACAOData.cxx~  TCACAOData.h  TCACAOData.h~  TCACAOPhysics.cxx  TCACAOPhysics.cxx~  TCACAOPhysics.h  TCACAOPhysics.h~  TCACAOSpectra.cxx  TCACAOSpectra.cxx~  TCACAOSpectra.h
NPLib/Detectors/CeBr3/: CMakeLists.txt  TCeBr3Data.cxx  TCeBr3Data.h  TCeBr3Physics.cxx  TCeBr3Physics.h  TCeBr3Spectra.cxx  TCeBr3Spectra.h
NPLib/Detectors/Coaxial_Germanium/: CMakeLists.txt  TCoaxial_GermaniumData.cxx  TCoaxial_GermaniumData.h  TCoaxial_GermaniumPhysics.cxx  TCoaxial_GermaniumPhysics.h  TCoaxial_GermaniumSpectra.cxx  TCoaxial_GermaniumSpectra.h
NPLib/Detectors/CsITl/: CMakeLists.txt  TCsITlData.cxx  TCsITlData.h  TCsITlPhysics.cxx  TCsITlPhysics.h
NPLib/Detectors/Dali2/: CMakeLists.txt  TDali2Data.cxx  TDali2Data.h  TDali2Physics.cxx  TDali2Physics.h  TDali2Spectra.cxx  TDali2Spectra.h
NPLib/Detectors/EdinburghDSSD/: CMakeLists.txt  EdinburghDSSDMap.h  TEdinburghDSSDData.cxx  TEdinburghDSSDData.h  TEdinburghDSSDPhysics.cxx  TEdinburghDSSDPhysics.h  TEdinburghDSSDSpectra.cxx  TEdinburghDSSDSpectra.h
NPLib/Detectors/EdinburghDSSD/ressources/: Mask.cxx
NPLib/Detectors/Epic/: CMakeLists.txt  TEpicData.cxx  TEpicData.h  TEpicPhysics.cxx  TEpicPhysics.h  TEpicSpectra.cxx  TEpicSpectra.h
NPLib/Detectors/Exogam/: CMakeLists.txt  Geometry_Clover_Exogam.h  TExogamCalData.cxx  TExogamCalData.h  TExogamData.h  TExogamGeo.cxx  TExogamGeo.h  TExogamPhysics.cxx  TExogamPhysics.h  testExo
NPLib/Detectors/GRAPE/: CMakeLists.txt  TGRAPEData.cxx  TGRAPEData.h  TGRAPEPhysics.cxx  TGRAPEPhysics.h
NPLib/Detectors/GeLi/: CMakeLists.txt  TGeLiData.cxx  TGeLiData.h  TGeLiPhysics.cxx  TGeLiPhysics.h  TGeLiSpectra.cxx  TGeLiSpectra.h
NPLib/Detectors/LEPS/: CMakeLists.txt  TLEPSData.cxx  TLEPSData.h  TLEPSPhysics.cxx  TLEPSPhysics.h  TLEPSSpectra.cxx  TLEPSSpectra.h
NPLib/Detectors/Monster/: CMakeLists.txt  TMonsterData.cxx  TMonsterData.h  TMonsterPhysics.cxx  TMonsterPhysics.h  TMonsterSpectra.cxx  TMonsterSpectra.h
NPLib/Detectors/NeuLAND/: CMakeLists.txt  TNeuLANDData.cxx  TNeuLANDData.h  TNeuLANDPhysics.cxx  TNeuLANDPhysics.h  TNeuLANDSpectra.cxx  TNeuLANDSpectra.h
NPLib/Detectors/Plastic_BEDO/: CMakeLists.txt  TPlastic_BEDOData.cxx  TPlastic_BEDOData.h  TPlastic_BEDOPhysics.cxx  TPlastic_BEDOPhysics.h  TPlastic_BEDOSpectra.cxx  TPlastic_BEDOSpectra.h
NPLib/Detectors/Plunger/: CMakeLists.txt  TPlungerData.cxx  TPlungerData.h  TPlungerPhysics.cxx  TPlungerPhysics.h  TPlungerSpectra.cxx  TPlungerSpectra.h
NPLib/Detectors/STARKjr/: CMakeLists.txt  TSTARKjrRaw.cxx  TSTARKjrRaw.h
NPLib/Detectors/TOGAXSI_GAGG/: CMakeLists.txt  TTOGAXSI_GAGGData.cxx  TTOGAXSI_GAGGData.h  TTOGAXSI_GAGGPhysics.cxx  TTOGAXSI_GAGGPhysics.h  TTOGAXSI_GAGGSpectra.cxx  TTOGAXSI_GAGGSpectra.h
NPLib/Detectors/TOGAXSI_SI/: CMakeLists.txt  TTOGAXSI_SIData.cxx  TTOGAXSI_SIData.h  TTOGAXSI_SIPhysics.cxx  TTOGAXSI_SIPhysics.h  TTOGAXSI_SISpectra.cxx  TTOGAXSI_SISpectra.h
NPLib/Detectors/Tina/: CMakeLists.txt  TTinaData.cxx  TTinaData.h  TTinaPhysics.cxx  TTinaPhysics.h  TTinaSpectra.cxx  TTinaSpectra.h
NPLib/Detectors/Tina/resources/: Mask.cxx  Mask_BM.cxx
NPLib/Detectors/VOICE/: CMakeLists.txt  TVOICEData.cxx  TVOICEData.h  TVOICEPhysics.cxx  TVOICEPhysics.h  TVOICESpectra.cxx  TVOICESpectra.h
NPLib/Detectors/ZDD/: CMakeLists.txt
NPLib/Detectors/quadranMSQ25/: CMakeLists.txt  TquadranMSQ25Data.cxx  TquadranMSQ25Data.h  TquadranMSQ25Physics.cxx  TquadranMSQ25Physics.h  TquadranMSQ25Spectra.cxx  TquadranMSQ25Spectra.h
NPLib/Neutron/: NPCrossTalk.cxx  NPCrossTalk.h
NPLib/Physics/: CMakeLists.txt  NPBeam.cxx  NPBeam.h  NPBreitWigner.cxx  NPBreitWigner.h  NPDecay.cxx  NPDecay.h  NPFunction.cxx  NPFunction.h  NPInelasticBreakup.cxx  NPInelasticBreakup.h  NPInelasticBreakupLinkDef.h  NPParticle.cxx  NPParticle.h  NPQFS.cxx  NPQFS.h  NPReaction.cxx  NPReaction.h  NPTimeStamp.cxx  NPTimeStamp.h  NPTimeStampLinkDef.h  TFissionConditions.h  TInteractionCoordinates.cxx  TInteractionCoordinates.h  TReactionConditions.cxx  TReactionConditions.h  TTrackInfo.cxx  TTrackInfo.h
NPLib/TrackReconstruction/: CMakeLists.txt  NPDCReconstructionMT.cxx  NPDCReconstructionMT.h  NPLinearRansac3D.cxx  NPLinearRansac3D.h  NPRansacACTAR.cxx  NPRansacACTAR.h
NPLib/Utility/: CMakeLists.txt  npanalysis.cxx  npefficiency  npefficiency.cxx
NPSimulation/: .gitignore  Simulation.cc
NPSimulation/Core/: CMakeLists.txt  EventAction.cc  MaterialManager.cc  Particle.cc  Particle.hh  ParticleStack.cc  ParticleStack.hh  PrimaryGeneratorAction.cc  SteppingAction.cc  SteppingAction.hh  TrackingAction.cc  TrackingAction.hh
NPSimulation/EventGenerator/: CMakeLists.txt  EventGeneratorAlphaDecay.cc  EventGeneratorAlphaDecay.hh  EventGeneratorBeam.cc  EventGeneratorCosmic.cc  EventGeneratorGEFReader.cc  EventGeneratorGEFReader.hh  EventGeneratorIsotropic.cc  EventGeneratorIsotropic.hh  EventGeneratorMultipleParticle.cc
NPSimulation/Process/: BeamReaction.cc  BeamReaction.hh  CMakeLists.txt  Decay.cc  FastDriftElectron.cc  FissionDecay.cc  PhysicsList.cc  PhysicsList.hh  ThreeBody.cc
NPSimulation/Scorers/: CMakeLists.txt  (+14 more)
Projects/: .gitignore
(+255 files in other folders)
